--- a/SimpleQuiz/Views/Quiz/Signup.cshtml
+++ b/SimpleQuiz/Views/Quiz/Signup.cshtml
@@ -17,6 +17,18 @@
                 <label for="signupPassword" class="form-label">رمز عبور:</label>
                 <input type="password" class="form-control" id="signupPassword" required>
             </div>
+            <div class="mb-3">
+                <label for="signupRepeatPassword" class="form-label">تکرار رمز عبور:</label>
+                <input type="password" class="form-control" id="signupRepeatPassword" required>
+            </div>
+            <div class="mb-3">
+                <label for="signupEmail" class="form-label">ایمیل :</label>
+                <input type="email" class="form-control" id="signupEmail" required>
+            </div>
+            <div class="mb-3">
+                <label for="signupMobile" class="form-label">تلفن همراه :</label>
+                <input type="tel" class="form-control" id="signupMobile" required>
+            </div>
             <button type="button" class="btn btn-success w-100" onclick="signup()">ثبت‌نام</button>
         </form>
         <p class="text-center mt-3">قبلاً ثبت‌نام کرده‌اید؟ <a href="login.html">وارد شوید</a></p>
