--- a/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
+++ b/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
@@ -5,39 +5,39 @@
 
 <div class="col-lg-12">
     <div class="row">
-    <div class="col-xl-6 col-md-6">
-        <div class="card ribbone-card">
-            <div class="arrow-ribbone-left bg-secondary">اطلاعات</div>
-            <div class="card-body  p-6">
-                <h6 class="card-subtitle mb-2 text-dark fw-bold text-end">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title. Some quick example text to build on the card title</p>
+        <div class="col-xl-6 col-md-6">
+            <div class="card ribbone-card">
+                <div class="arrow-ribbone-left bg-secondary">اطلاعات</div>
+                <div class="card-body  p-6">
+                    <h6 class="card-subtitle mb-2 text-dark fw-bold text-end">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title. Some quick example text to build on the card title</p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xl-6 col-md-6">
-        <div class="card ribbone-card">
-            <div class="ribbone ribbone-top-left text-primary"><span class="bg-primary">زمان آزمون</span></div>
-            <div class="card-body  p-6">
-                <div class="container">
-                    <section id="timer" dir="ltr">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 countdown-wrapper text-center mb20">
-                                <div class="card-block">
-                                    <div id="countdown">
-                                        <div class="well">
-                                            <span id="hour" class="timer bg-success"></span>
-                                            <span id="min" class="timer bg-info"></span>
-                                            <span id="sec" class="timer bg-primary"></span>
+        <div class="col-xl-6 col-md-6">
+            <div class="card ribbone-card">
+                <div class="ribbone ribbone-top-left text-primary"><span class="bg-primary">زمان آزمون</span></div>
+                <div class="card-body  p-6">
+                    <div class="container">
+                        <section id="timer" dir="ltr">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 countdown-wrapper text-center mb20">
+                                    <div class="card-block">
+                                        <div id="countdown">
+                                            <div class="well">
+                                                <span id="hour" class="timer bg-success"></span>
+                                                <span id="min" class="timer bg-info"></span>
+                                                <span id="sec" class="timer bg-primary"></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </section>
+                        </section>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <div class="expanel expanel-secondary">
         <div class="expanel-heading">
@@ -75,17 +75,16 @@
                                                     r++;
                                                 }
                                             }
-                                            
+
                                         </tbody>
                                     </table>
                                 </td>
-                            </tr>                           
+                            </tr>
                         }
                     </tbody>
                 </table>
             </div>
             <div style="padding:10px">
-
             </div>
             <div class="col mb-2">
                 <div class="btn-list">
@@ -112,17 +111,18 @@
                                 <th>پاسخ شما</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr class="table-default">
+                        <tbody id="result">
+                            <tr class="table-success">
                                 <td>1</td>
                                 <td>Joan Powell</td>
                                 <td>Associate Developer</td>
-                            </tr>                         
+                            </tr>
                             <tr class="table-success">
                                 <td>4</td>
                                 <td>Julian Kerr</td>
                                 <td>Senior Javascript Developer</td>
                             </tr>
+                            <tr></tr>
                             <tr class="table-danger">
                                 <td>5</td>
                                 <td>Cedric Kelly</td>
