--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -38,9 +38,7 @@
     <link href="~/bootstrap/assets/switcher/demo.css" rel="stylesheet" />
 
 </head>
-
 <body class="app sidebar-mini ltr light-mode">
-
     <!-- Switcher -->
     <div class="switcher-wrapper">
         <div class="demo_changer">
@@ -1618,13 +1616,16 @@
     <script src="~/bootstrap/assets/plugins/bootstrap5-typehead/autocomplete.js"></script>
     <script src="~/bootstrap/assets/js/typehead.js"></script>
 
+    <!-- SPARKLINE JS-->
+    <script src="~/bootstrap/assets/js/jquery.sparkline.min.js"></script>
+
     <!-- SIDEBAR JS -->
     <script src="~/bootstrap/assets/plugins/sidebar/sidebar.js"></script>
 
     <!-- Perfect SCROLLBAR JS-->
-    <script src="~/bootstrap/assets/plugins/p-scroll/perfect-scrollbar.js"></script>
+     <script src="~/bootstrap/assets/plugins/p-scroll/perfect-scrollbar.js"></script>
     <script src="~/bootstrap/assets/plugins/p-scroll/pscroll.js"></script>
-    <script src="~/bootstrap/assets/plugins/p-scroll/pscroll-1.js"></script>
+    <script src="~/bootstrap/assets/plugins/p-scroll/pscroll-1.js"></script> 
 
     <!-- Color Theme js -->
     <script src="~/bootstrap/assets/js/themeColors.js"></script>
