--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -1639,6 +1639,30 @@
     <!-- Switcher js -->
     <script src="~/bootstrap/assets/switcher/js/switcher.js"></script>
     <script src="~/js/scripts.js" asp-append-version="true"></script>
+
+    <!-- INTERNAL INDEX JS -->
+    <script src="~/bootstrap/assets/js/widget.js"></script>
+
+     <!-- CHART-CIRCLE JS-->
+    <script src="~/bootstrap/assets/js/circle-progress.min.js"></script>
+
+    <!-- MORRIS CHART JS-->
+    <script src="~/bootstrap/assets/plugins/morris/raphael-min.js"></script>
+    <script src="~/bootstrap/assets/plugins/morris/morris.js"></script>
+
+    <!-- CHARTJS CHART JS-->
+    <script src="~/bootstrap/assets/plugins/chart/Chart.bundle.js"></script>
+    <script src="~/bootstrap/assets/plugins/chart/utils.js"></script>
+
+    <!-- C3 CHART JS-->
+    <script src="~/bootstrap/assets/plugins/charts-c3/d3.v5.min.js"></script>
+    <script src="~/bootstrap/assets/plugins/charts-c3/c3-chart.js"></script>
+
+    <!-- PIETY CHART JS-->
+    <script src="~/bootstrap/assets/plugins/peitychart/jquery.peity.min.js"></script>
+    <script src="~/bootstrap/assets/plugins/peitychart/peitychart.init.js"></script>
+
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
