--- a/SimpleQuiz/wwwroot/css/styles.css
+++ b/SimpleQuiz/wwwroot/css/styles.css
@@ -49,7 +49,12 @@
 /*}*/
 
 /*timer*/
+#result-panel {
+    display: none;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Lato:100,400);
+
 .mb20 {
     margin-bottom: 20px;
 }
@@ -69,6 +74,7 @@ section {
     text-shadow: 1px 1px 5px black;
     padding: 0px 0;
 }
+
 #timer .countdown-wrapper #countdown .timer {
     margin: 10px;
     padding: 20px;
