--- a/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
+++ b/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
@@ -8,9 +8,29 @@
         <div class="col-xl-6 col-md-6">
             <div class="card ribbone-card">
                 <div class="arrow-ribbone-left bg-secondary">اطلاعات</div>
-                <div class="card-body  p-6">
-                    <h6 class="card-subtitle mb-2 text-dark fw-bold text-end">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title. Some quick example text to build on the card title</p>
+                <div class="card-body  p-6 row">
+                    <div class="card-body" style="padding:9px">
+                        <div class="table-responsive">
+                            <table class="table border text-nowrap text-md-nowrap table-bordered mb-0 text-center">
+                                <thead>
+                                    <tr>
+                                        <th class=" fw-bold"><i class="icon icon-menu text-secondary fa-2x me-2"></i>تعداد سوالات</th>
+                                        <th class=" fw-bold"><i class="icon icon-check text-primary fa-2x me-2"></i>نوع آزمون</th>
+                                        <th class=" fw-bold"><i class="icon icon-clock text-success fa-2x me-2"></i>زمان آزمون</th>
+                                        <th class=" fw-bold"><i class="icon icon-shield text-danger fa-2x me-2"></i>نمره منفی</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>30</td>
+                                        <td>چهار گزینه ای</td>
+                                        <td>30 دقیقه</td>
+                                        <td>ندارد</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
