--- a/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
+++ b/SimpleQuiz/Views/Quiz/QuizOnline2.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xl-6 col-md-6">
             <div class="card ribbone-card">
-                <div class="arrow-ribbone-left bg-secondary">اطلاعات</div>
+                <div class="arrow-ribbone-left bg-secondary">اطلاعات آزمون</div>
                 <div class="card-body  p-6 row">
                     <div class="card-body" style="padding:9px">
                         <div class="table-responsive">
@@ -16,16 +16,16 @@
                                     <tr>
                                         <th class=" fw-bold"><i class="icon icon-menu text-secondary fa-2x me-2"></i>تعداد سوالات</th>
                                         <th class=" fw-bold"><i class="icon icon-check text-primary fa-2x me-2"></i>نوع آزمون</th>
-                                        <th class=" fw-bold"><i class="icon icon-clock text-success fa-2x me-2"></i>زمان آزمون</th>
+                                        <th class=" fw-bold"><i class="icon icon-clock text-success fa-2x me-2"></i>زمان آزمون(دقیقه)</th>
                                         <th class=" fw-bold"><i class="icon icon-shield text-danger fa-2x me-2"></i>نمره منفی</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>30</td>
-                                        <td>چهار گزینه ای</td>
-                                        <td>30 دقیقه</td>
-                                        <td>ندارد</td>
+                                        <td>@ViewBag.QuizInfo.NumberOfQuestions</td>
+                                        <td>@ViewBag.QuizInfo.QuizType</td>
+                                        <td id="quiztime">@ViewBag.QuizInfo.QuizTime</td>
+                                        <td>@ViewBag.QuizInfo.NegativeScore</td>
                                     </tr>
                                 </tbody>
                             </table>
