--- a/SimpleQuiz/Views/Home/Index.cshtml
+++ b/SimpleQuiz/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a asp-controller="Quiz" asp-action="Login2">Login</a>.</p>
+    <p>Learn about <a asp-controller="Quiz" asp-action="Login">Login</a>.</p>
     <p>Learn about <a asp-controller="Quiz" asp-action="QuizOnline">Quiz</a>.</p>
+    <a id="generateLink" href="#" class="btn btn-primary" onclick="GetPage('QuizOnline','Quiz','QuizOnline')">Generate Secure Link</a>
     <p>Learn about <a asp-controller="Quiz" asp-action="Signup">Signup</a>.</p>
     <p>Learn about <a asp-controller="Quiz" asp-action="QuizOnline2">QuizOnline2</a>.</p>
-
 </div>
