Make Slider  Components And Persian

--- a/SimpleQuiz/Views/Quiz/Login.cshtml
+++ b/SimpleQuiz/Views/Quiz/Login.cshtml
@@ -22,7 +22,7 @@
 
             <div class="container-login100">
                 <div class="wrap-login100 p-6">
-                    <form class="login100-form validate-form">
+                    <form class="login100-form validate-form" id="loginForm">
                         <span class="login100-form-title pb-5">
                             ورود
                         </span>
