--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -45,33 +45,26 @@
             <div class="form_holder sidebar-right1">
                 <div class="row">
                     <div class="predefined_styles">
-                        <div class="swichermainleft text-center">
-                            <div class="p-3 d-grid gap-2">
-                                <a href="../../index.html" class="btn ripple btn-primary mt-0">View Demo</a>
-                                <a href="https://themeforest.net/item/sash-bootstrap-5-admin-dashboard-template/35183671" class="btn ripple btn-secondary">Buy Now</a>
-                                <a href="https://themeforest.net/user/spruko/portfolio" class="btn ripple btn-pink">Our Portfolio</a>
-                            </div>
-                        </div>
                         <div class="swichermainleft">
                             <h4>Navigation Style</h4>
                             <div class="skin-body">
                                 <div class="switch_section">
                                     <div class="switch-toggle d-flex">
-                                        <span class="me-auto">Vertical Menu</span>
+                                        <span class="me-auto">منوی عمودی</span>
                                         <p class="onoffswitch2">
                                             <input type="radio" name="onoffswitch15" id="myonoffswitch34" class="onoffswitch2-checkbox" checked>
                                             <label for="myonoffswitch34" class="onoffswitch2-label"></label>
                                         </p>
                                     </div>
                                     <div class="switch-toggle d-flex mt-2">
-                                        <span class="me-auto">Horizontal Click Menu</span>
+                                        <span class="me-auto">کلیک منوی افقی</span>
                                         <p class="onoffswitch2">
                                             <input type="radio" name="onoffswitch15" id="myonoffswitch35" class="onoffswitch2-checkbox">
                                             <label for="myonoffswitch35" class="onoffswitch2-label"></label>
                                         </p>
                                     </div>
                                     <div class="switch-toggle d-flex mt-2">
-                                        <span class="me-auto">Horizontal Hover Menu</span>
+                                        <span class="me-auto">منوی شناور افقی</span>
                                         <p class="onoffswitch2">
                                             <input type="radio" name="onoffswitch15" id="myonoffswitch111" class="onoffswitch2-checkbox">
                                             <label for="myonoffswitch111" class="onoffswitch2-label"></label>
@@ -375,21 +368,20 @@
     <!-- PAGE -->
     <div class="page">
         <div class="page-main">
-
             <!-- app-Header -->
             <div class="app-header header sticky">
                 <div class="container-fluid main-container">
                     <div class="d-flex">
                         <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-bs-toggle="sidebar" href="javascript:void(0)"></a>
                         <!-- sidebar-toggle-->
-                        <a class="logo-horizontal " href="index.html">
+                        <a class="logo-horizontal " href="/">
                             <img src="~/bootstrap/assets/images/brand/logo.png" class="header-brand-img desktop-logo" alt="logo">
                             <img src="~/bootstrap/assets/images/brand/logo-3.png" class="header-brand-img light-logo1"
                                  alt="logo">
                         </a>
                         <!-- LOGO -->
                         <div class="main-header-center ms-3 d-none d-lg-block">
-                            <input type="text" class="form-control" id="typehead" placeholder="Search for results..." autocomplete="off">
+                            <input type="text" class="form-control" id="typehead" placeholder="جستجو . . ." autocomplete="off">
                             <button class="btn px-0 pt-2"><i class="fe fe-search" aria-hidden="true"></i></button>
                         </div>
                         <div class="d-flex order-lg-2 ms-auto header-right-icons">
@@ -409,7 +401,7 @@
                                             </a>
                                             <div class="dropdown-menu header-search dropdown-menu-start">
                                                 <div class="input-group w-100 p-2">
-                                                    <input type="text" class="form-control" placeholder="Search....">
+                                                    <input type="text" class="form-control" placeholder="جستجو...">
                                                     <div class="input-group-text btn btn-primary">
                                                         <i class="fa fa-search" aria-hidden="true"></i>
                                                     </div>
@@ -717,8 +709,8 @@
                                             <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                                                 <div class="drop-heading">
                                                     <div class="text-center">
-                                                        <h5 class="text-dark mb-0 fs-14 fw-semibold" id="fullName">Percy Kewshun</h5>
-                                                        <small class="text-muted" id="username">Senior Admin</small>
+                                                        <h5 class="text-dark mb-0 fs-14 fw-semibold" id="fullName"></h5>
+                                                        <small class="text-muted" id="username"></small>
                                                     </div>
                                                 </div>
                                                 <div class="dropdown-divider m-0"></div>
@@ -765,26 +757,27 @@
                         <div class="slide-left disabled" id="slide-left"><svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191" width="24" height="24" viewBox="0 0 24 24"><path d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z" /></svg></div>
                         <ul class="side-menu">
                             <li class="sub-category">
-                                <h3>Main</h3>
+                                <h3>اصلی</h3>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item has-link" data-bs-toggle="slide" href="index.html"><i class="side-menu__icon fe fe-home"></i><span class="side-menu__label">Dashboard</span></a>
+                                <a class="side-menu__item has-link" data-bs-toggle="slide" href="index.html"><i class="side-menu__icon fe fe-home"></i><span class="side-menu__label">صفحه نخست</span></a>
                             </li>
                             <li class="sub-category">
-                                <h3>UI Kit</h3>
+                                <h3>رابط کاربری</h3>
                             </li>
                             <li>
                                 <a class="side-menu__item has-link" href="landing-page.html" target="_blank">
-                                    <i class="side-menu__icon fe fe-zap"></i><span class="side-menu__label">Landing Page</span><span class="badge bg-green br-5 side-badge blink-text pb-1">New</span>
+                                    <i class="side-menu__icon fe fe-zap"></i><span class="side-menu__label">تک صفحه ای</span><span class="badge bg-green br-5 side-badge blink-text pb-1">جدید</span>
                                 </a>
                             </li>
                             <li class="sub-category">
-                                <h3>Pre-build Pages</h3>
+                                <h3>بخش ها</h3>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-layers"></i><span class="side-menu__label">Pages</span><i class="angle fe fe-chevron-right"></i></a>
+                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-layers"></i><span class="side-menu__label">آزمون ها</span><i class="angle fe fe-chevron-right"></i></a>
                                 <ul class="slide-menu">
-                                    <li class="side-menu-label1"><a href="javascript:void(0)">Pages</a></li>
+                                    <li class="side-menu-label1"><a href="javascript:void(0)">آزمون ها</a></li>
+                                    @await Component.InvokeAsync("Sidebar")
                                     <li><a href="profile.html" class="slide-item"> Profile</a></li>
                                     <li><a href="editprofile.html" class="slide-item"> Edit Profile</a></li>
                                     <li><a href="notify-list.html" class="slide-item"> Notifications List</a></li>
@@ -835,9 +828,9 @@
                             </li>
                             
                             <li class="slide">
-                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-folder"></i><span class="side-menu__label">File Manager</span><span class="badge bg-pink side-badge">4</span><i class="angle fe fe-chevron-right hor-angle"></i></a>
+                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-folder"></i><span class="side-menu__label">آموزش ها</span><span class="badge bg-pink side-badge">4</span><i class="angle fe fe-chevron-right hor-angle"></i></a>
                                 <ul class="slide-menu">
-                                    <li class="side-menu-label1"><a href="javascript:void(0)">File Manager</a></li>
+                                    <li class="side-menu-label1"><a href="javascript:void(0)">آموزش ها</a></li>
                                     <li><a href="file-manager.html" class="slide-item"> File Manager</a></li>
                                     <li><a href="filemanager-list.html" class="slide-item"> File Manager List</a></li>
                                     <li><a href="filemanager-details.html" class="slide-item"> File Details</a></li>
@@ -845,10 +838,10 @@
                                 </ul>
                             </li>
                             <li class="sub-category">
-                                <h3>Misc Pages</h3>
+                                <h3>مدیریت</h3>
                             </li>
                             <li class="slide">
-                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-users"></i><span class="side-menu__label">Authentication</span><i class="angle fe fe-chevron-right"></i></a>
+                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-users"></i><span class="side-menu__label">مدیریت کاربران</span><i class="angle fe fe-chevron-right"></i></a>
                                 <ul class="slide-menu">
                                     <li class="side-menu-label1"><a href="javascript:void(0)">Authentication</a></li>
                                     <li><a href="login.html" class="slide-item"> Login</a></li>
@@ -868,9 +861,29 @@
                                     </li>
                                 </ul>
                             </li>
-                            
+                            <li class="slide">
+                                <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-users"></i><span class="side-menu__label">مدیریت بخش ها</span><i class="angle fe fe-chevron-right"></i></a>
+                                <ul class="slide-menu">
+                                    <li class="side-menu-label1"><a href="javascript:void(0)">Authentication</a></li>
+                                    <li><a href="login.html" class="slide-item"> Login</a></li>
+                                    <li><a href="register.html" class="slide-item"> Register</a></li>
+                                    <li><a href="forgot-password.html" class="slide-item"> Forgot Password</a></li>
+                                    <li><a href="lockscreen.html" class="slide-item"> Lock screen</a></li>
+                                    <li class="sub-slide">
+                                        <a class="sub-side-menu__item" data-bs-toggle="sub-slide" href="javascript:void(0)"><span class="sub-side-menu__label">Error Pages</span><i class="sub-angle fe fe-chevron-right"></i></a>
+                                        <ul class="sub-slide-menu">
+                                            <li><a href="400.html" class="sub-slide-item"> 400</a></li>
+                                            <li><a href="401.html" class="sub-slide-item"> 401</a></li>
+                                            <li><a href="403.html" class="sub-slide-item"> 403</a></li>
+                                            <li><a href="404.html" class="sub-slide-item"> 404</a></li>
+                                            <li><a href="500.html" class="sub-slide-item"> 500</a></li>
+                                            <li><a href="503.html" class="sub-slide-item"> 503</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
                             <li class="sub-category">
-                                <h3>General</h3>
+                                <h3>سایر</h3>
                             </li>
                             <li class="slide">
                                 <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-bar-chart-2"></i><span class="side-menu__label">Charts</span><span class="badge bg-secondary side-badge">6</span><i class="angle fe fe-chevron-right hor-angle"></i></a>
